tests/sksl/errors/Ossfuzz27614.glsl
### Compilation failed:

error: 1: type mismatch: '-' cannot operate on 'float', 'int'
void main() { 0.5 - 0 * ~0 - half2(0) + 1; }
              ^^^^^^^^^^^^
1 error
